# configuration-overrider

./: .gitignore  README.md  pyproject.toml
configuration_overrider/: __init__.py  abstract_overrider.py
configuration_resolver/: __init__.py
