[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
requires-python = ">=3.7"
module = "configuration_resolver"
dist-name = "configuration-overrider"
author = "jtviegas"
author-email = "jtviegas.js@gmail.com"
home-page = "https://github.com/jtviegas/configuration-overrider"
description-file = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.7",
]
